--- a/Mid_Project/Views/Student/AddStudentUC.xaml
+++ b/Mid_Project/Views/Student/AddStudentUC.xaml
@@ -10,7 +10,7 @@
     <UserControl.Resources>
         <Style TargetType="Label">
             <Setter Property="Width" Value="120"></Setter>
-            <Setter Property="Height" Value="50"></Setter>
+            <Setter Property="Height" Value="40"></Setter>
             <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
             <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
             <Setter Property="Margin" Value="30,0,0,0"></Setter>
@@ -21,13 +21,11 @@
         </Style>
 
         <Style TargetType="TextBox">
-            <Setter Property="Width" Value="350"></Setter>
-            <Setter Property="Height" Value="50"></Setter>
+            <Setter Property="Width" Value="275"></Setter>
+            <Setter Property="Height" Value="40"></Setter>
             <Setter Property="FontSize" Value="20"></Setter>
             <Setter Property="FontFamily" Value="Arial"></Setter>
-            <Setter Property="FontWeight" Value="Bold"></Setter>
             <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
-            <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
         </Style>
     </UserControl.Resources>
     
@@ -38,7 +36,7 @@
                 <Label Content="First Name:"/>
                 <TextBox x:Name="txtFirstName"/>
                 <Label Content="Last Name:"/>
-                <TextBox x:Name="txtLaststName"/>
+                <TextBox x:Name="txtLastName"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="20">
                 <Label Content="Contact:"/>
@@ -48,11 +46,13 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="20">
                 <Label Content="DOB"/>
-                <TextBox x:Name="txtDOB" InputScope="Date"/>
+                <DatePicker x:Name="txtDOB" Width="275" Height="40" InputScope="Date" FontFamily="Arial" 
+                          FontSize="25" VerticalContentAlignment="Center"/>
                 <Label Content="Gender:"/>
-                <ComboBox Name="cbGender" Width="350" Height="50">
-                    <ComboBoxItem Content="Male" Tag="Male"></ComboBoxItem>
-                    <ComboBoxItem Content="Female" Tag="Female"></ComboBoxItem>
+                <ComboBox Name="cbGender" Width="275" Height="40" FontFamily="Arial" FontSize="20" 
+                          VerticalContentAlignment="Center">
+                    <ComboBoxItem Content="Male" />
+                    <ComboBoxItem Content="Female" />
                 </ComboBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="20">
@@ -60,7 +60,7 @@
                 <TextBox x:Name="txtRegNo"/>
             </StackPanel>
             <Button x:Name="btnEnter" Content="TBD" FontSize="25" FontWeight="Bold" FontFamily="Book Antiqua" Background="DarkCyan" 
-                        Width="200" Margin="20,0,20,20" Height="100" VerticalAlignment="Bottom" HorizontalAlignment="Right"></Button>
+                        Width="200" Margin="20,0,20,20" Height="70" VerticalAlignment="Bottom" HorizontalAlignment="Right"></Button>
         </StackPanel>
     </Grid>
 </UserControl>
