--- a/Mid_Project/Views/Group/ManageGroups.xaml
+++ b/Mid_Project/Views/Group/ManageGroups.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Mid_Project.Views.Group"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="700">
     
     <!-- UC Resources -->
     <UserControl.Resources>
@@ -18,34 +18,31 @@
             <Setter Property="FontSize" Value="20"/>
         </Style>
         <Style TargetType="TextBlock">
-            <Setter Property="Height" Value="45"/>
+            <Setter Property="Height" Value="auto"/>
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
     </UserControl.Resources>
 
     <!-- UC Grid -->
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="200"/>
-        </Grid.ColumnDefinitions>
-        
         <Grid.RowDefinitions >
-            <RowDefinition Height="15*" />
-            <RowDefinition Height="85*"/>
+            <RowDefinition Height=".15*" />
+            <RowDefinition Height=".60*"/>
+            <RowDefinition Height=".25*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Select Any Row to perform the button operations" Grid.Row="0" Grid.Column="0"/>
-        <DataGrid Grid.Row="1" x:Name="dgTableData" Margin="10"/>
-        <Button x:Name="btnDelete" Grid.Column="1" Height="50" Content="Delete" Background="Red"/>
+        <TextBlock Text="Select Any Row to perform the button operations" Grid.Row="0"/>
+        <DataGrid Grid.Row="1" x:Name="dgTableData" Margin="10" BorderThickness="3" IsReadOnly="True"/>
 
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
-            <Button x:Name="btnUpdatePrj" Content="Update Project" Background="#20B1AA"/>
-            <Button x:Name="btnUpdateStu" Content="Update Students" Background="#20B1AA"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button x:Name="btnUpdatePrj" Content="Update Project" Background="DarkCyan"/>
             <Button x:Name="btnAddEvaluation" Content="Add Evaluation" Background="#20B1AA"/>
+            <Button x:Name="btnUpdateStu" Content="Update Students" Background="DarkCyan"/>
         </StackPanel>
-
     </Grid>
 </UserControl>
