--- a/Mid_Project/Views/Group/groupUC.xaml
+++ b/Mid_Project/Views/Group/groupUC.xaml
@@ -25,11 +25,11 @@
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Content="Make New Group" Command="{Binding makeGroup}"/>
-                <Button Content="View Groups" Command="{Binding viewGroup}"/>
+                <Button Content="Assign Group Project" Command="{Binding addGroupProject}"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Add Group Student" Command="{Binding addGroupStudent}"/>
+                <Button Content="View Groups" Command="{Binding viewGroup}" Background="DarkCyan"/>
             </StackPanel>
         </StackPanel>
     </Grid>
